@@ -5,6 +5,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* add support for magnet links and URLs in python example client
+	* fixed typo in python bindings' add_torrent_params
 	* introduce a way to add built-in plugins from python
 	* consistently disconnect the same peer when two peers simultaneously connect
 	* fix local endpoint queries for uTP connections
